// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <div>
    <form>
      <input
        id="new-todo"
        value=""
      />
      <button
        role="submit"
      >
        add
      </button>
    </form>
    <ul>
      <li
        class=""
      >
        <input
          type="checkbox"
        />
        one
      </li>
      <li
        class=""
      >
        <input
          type="checkbox"
        />
        two
      </li>
    </ul>
  </div>
</div>
`;

exports[`updates on click 1`] = `
<div>
  <div>
    <form>
      <input
        id="new-todo"
        value=""
      />
      <button
        role="submit"
      >
        add
      </button>
    </form>
    <ul>
      <li
        class="completed"
      >
        <input
          checked=""
          type="checkbox"
        />
        one
      </li>
    </ul>
  </div>
</div>
`;
